FIX: Fixed a bug when using the compact view and using the Quick Increment layout where hitting the `Shift` or `Control` keys would cause the entire compact view to change widths

--- a/src/styles/scaffolding/foundry-window-app-compact.scss
+++ b/src/styles/scaffolding/foundry-window-app-compact.scss
@@ -257,6 +257,12 @@
               }
             }
           }
+          .fsc-adjustable-controls{
+            .fsc-control{
+              width: calc(5ch + (0.48rem * 2));
+              flex: 1;
+            }
+          }
         }
         .fsc-side-drawer{
           top: pxToRem(10);
